<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Vinny\'s Movies</string>

    <!-- Label for the actions in action bar [CHAR LIMIT=30] -->
    <string name="action_sort">Sort By</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_trailer">Share</string>

    <!-- Label for the activity title in the action bar [CHAR LIMIT=30] -->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Label for the sort type preference [CHAR LIMIT=30] -->
    <string name="pref_sort_type_label">Sort by</string>
    <!-- Label for popularity option in sort type preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_popularity">Most Popular</string>
    <!-- Label for rating option in sort type preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_rating">Highest Rated</string>
    <!-- Label for watchlist option in sort type preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_watchlist">My Watchlist</string>
    <!-- Key name for sort preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_type_key" translatable="false">type</string>
    <!-- Default sort for sorting preference [CHAR LIMIT=NONE] -->
    <string name="pref_sort_type_default" translatable="false">popularity.desc</string>
    <!-- Value in SharedPreferences for popularity sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_type_popularity" translatable="false">popularity.desc</string>
    <!-- Value in SharedPreferences for rating sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_type_rating" translatable="false">vote_average.desc</string>
    <!-- Value in SharedPreferences for watchlist sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_type_watchlist" translatable="false">watchlist</string>


    <!-- Label for the sort time preference [CHAR LIMIT=30] -->
    <string name="pref_sort_time_label">Released in the Last</string>
    <!-- Label for 1 month in sort time preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_month">Month</string>
    <!-- Label for 3 months in sort time preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_3months">3 Months</string>
    <!-- Label for 6 months in sort time preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_6months">6 Months</string>
    <!-- Label for  a year in sort time preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_year">Year</string>
    <!-- Label for all time in sort time preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_allTime">All Time</string>
    <!-- Key name for sort time preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_key" translatable="false">time</string>
    <!-- Default sort for sorting preference [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_default" translatable="false">3</string>
    <!-- Value in SharedPreferences for month sort time option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_month" translatable="false">1</string>
    <!-- Value in SharedPreferences for 3 months sort time option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_3months" translatable="false">3</string>
    <!-- Value in SharedPreferences for 6 months sort time option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_6months" translatable="false">6</string>
    <!-- Value in SharedPreferences for year sort time option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_year" translatable="false">12</string>
    <!-- Value in SharedPreferences for all time sort time option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_time_allTime" translatable="false">1200</string>


    <!-- Strings for the Toggle button  -->
    <string name="button_text_on">ADDED TO\nWATCHLIST</string>
    <string name="button_text_off">ADD TO\nWATCHLIST</string>
    <!-- Strings for the Toasts linked to the Toggle button  -->
    <string name="button_off_toast">Movie removed from your Watchlist</string>


    <!-- Strings for formatting movie-related data -->
    <!-- Rating format [CHAR LIMIT=5 -->
    <string name="format_rating"><xliff:g id="rating">%1.1f</xliff:g>"/10"</string>
    <string name="format_author">Review by <xliff:g id="author">%1$s</xliff:g>: </string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmovies.vinnypalumbo.com</string>
    <string name="content_authority">com.vinnypalumbo.popularmovies</string>
</resources>
