<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_sort_type_label"
        android:key="@string/pref_sort_type_key"
        android:defaultValue="@string/pref_sort_type_default"
        android:entryValues="@array/pref_sort_type_values"
        android:entries="@array/pref_sort_type_options" />

    <ListPreference
        android:title="@string/pref_sort_time_label"
        android:key="@string/pref_sort_time_key"
        android:defaultValue="@string/pref_sort_time_default"
        android:entryValues="@array/pref_sort_time_values"
        android:entries="@array/pref_sort_time_options" />

</PreferenceScreen>