<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:title="@string/action_sort"
        android:id="@+id/action_sort"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:defaultValue="@string/pref_sort_popularity">
        <menu>
            <item
                android:id="@+id/menuSortPopularity"
                android:title="@string/pref_sort_label_popularity" />
            <item
                android:id="@+id/menuSortRating"
                android:title="@string/pref_sort_label_rating" />

            <item
                android:id="@+id/menuSortWatchlist"
                android:title="@string/pref_sort_label_watchlist" />
        </menu>
    </item>

</menu>